<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.MovieActivity">

    <TextView
        android:id="@+id/cine_prom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/cine_promocion_txt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/cine_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cine_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cine_prom"
        app:layout_constraintTop_toBottomOf="@id/cine_prom" />

    <TextView
        android:id="@+id/cine_ticket"
        android:layout_width="365dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cine_onepay"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/cine_price"
        app:layout_constraintTop_toBottomOf="@id/cine_price" />



    <ImageButton
        android:id="@+id/smartfit_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/cineplanet_logo"
        app:layout_constraintStart_toStartOf="@id/cine_prom"
        app:layout_constraintTop_toBottomOf="@id/cine_prom" />

    <ImageButton
            android:id="@+id/sportlife_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="24dp"
            android:src="@drawable/cinehoyts_logo"
            app:layout_constraintLeft_toRightOf="@id/sportlife_logo"
            app:layout_constraintTop_toBottomOf="@id/cine_prom"/>

    <ImageButton
            android:id="@+id/energy_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/cinemark_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/energy_logo"
            app:layout_constraintTop_toBottomOf="@id/cine_prom"/>

    <TextView
            android:id="@+id/gym_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            app:layout_constraintLeft_toRightOf="@id/gym_minus_qty"
            app:layout_constraintTop_toBottomOf="@id/sportlife_logo" android:layout_marginTop="20dp"/>

    <ImageView
            android:id="@+id/gym_add_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            app:layout_constraintLeft_toRightOf="@id/gym_cantidad"
            app:layout_constraintStart_toEndOf="@id/gym_cantidad"
            app:layout_constraintTop_toBottomOf="@id/sportlife_logo"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_minus" android:id="@+id/gym_minus_qty"
            app:layout_constraintTop_toBottomOf="@id/sportlife_logo"
            app:layout_constraintStart_toStartOf="@id/cine_prom"/>

    <Button
        android:id="@+id/gym_continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonShopping"
        android:text="@string/cine_continue"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toStartOf="@id/cine_prom"
        app:layout_constraintTop_toBottomOf="@id/gym_minus_qty" />

    <ImageView
        android:id="@+id/convenio_logo"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoyts_logo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_convenios_small"
        tools:layout_constraintTop_toBottomOf="@id/cinemark_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cine_terms"
        app:layout_constraintStart_toStartOf="@id/gym_continue_btn"
        app:layout_constraintTop_toBottomOf="@id/gym_continue_btn"
        tools:layout_constraintTop_toBottomOf="@id/cine_continue_btn" />

</android.support.constraint.ConstraintLayout>