<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_13sdp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/checkout_minus"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bt_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimaryText"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/checkout_plus"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bt_plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/product_name"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/remove_from_cart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/delete" />

</LinearLayout>
